--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon</title> 
 </head>
 
 <body>
@@ -26,7 +26,7 @@
     </div>
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <div class="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="a desk with a laptop, spiral, coffee, and pen's"/>
             <h2>Search Engine Optimization</h2>
             <p>
